--- a/src/js/outer/modal/1.0.1/less/cdn_index.less
+++ b/src/js/outer/modal/1.0.1/less/cdn_index.less
@@ -1,3 +1,4 @@
+@import "../../../../../less/inner/theme/default";
 .nv-modal {
   position: fixed;
   top: 0;
@@ -102,16 +103,16 @@
   margin-left: 8px;
 }
 .nv-modal-info {
-  color: #4363f4;
+  color: @primary-6;
 }
 .nv-modal-ok {
-  color: #6CC902;
+  color: @green-6;
 }
 .nv-modal-warning {
-  color: #faad14;
+  color: @orange-6;
 }
 .nv-modal-error {
-  color: #E2231A;
+  color: @red-6;
 }
 .prompt_content {
   display: inline-block;
