--- a/src/js/outer/page/1.0.1/less/cdn_index.less
+++ b/src/js/outer/page/1.0.1/less/cdn_index.less
@@ -1,7 +1,6 @@
-
 @import "../../../../../less/inner/theme/default";
-@page-base: #4363f4;
-@page-base-hover: #4363f4;
+@page-base: @primary-6;
+@page-base-hover: @primary-6;
 
 .@{nv-prefix}-pagination {
     font-size: 14px;
