--- a/src/less/inner/modules/nav.less
+++ b/src/less/inner/modules/nav.less
@@ -467,8 +467,8 @@
     color: #ffffff;
   }
   .nv-nav-tree .nv-nav-selected {
-    border-right: 2px solid #4363f4;
-    background: #4363f4;
+    border-right: 2px solid @nav-border-color;
+    background:@nav-color-bg;
   }
   .nv-nav-tree .nv-nav-selected:hover,
   .nv-nav-tree .nv-nav-selected a {
