--- a/src/less/inner/modules/select.less
+++ b/src/less/inner/modules/select.less
@@ -71,7 +71,7 @@
       &:hover{
         background: @item-hover-bg;
         .@{nv-prefix}-select-checkbox-normal{
-          border-color: #4363F4;
+          border-color: @select-checkbox-bg;
         }
       }
       .@{nv-prefix}-select-checkbox-normal{
@@ -124,7 +124,7 @@
     .@{nv-prefix}-select-checkbox-checked{
       .@{nv-prefix}-select-checkbox-normal{
         border: none;
-        background: #4363F4;
+        background: @select-checkbox-bg;
         span{
           visibility: visible;
         }
