--- a/src/less/inner/theme/geekblue.less
+++ b/src/less/inner/theme/geekblue.less
@@ -520,11 +520,11 @@
 //nav theme geekblue
 //nav horizontal color
 @nav-color-basic        : @grey-1;           //text color
-@nav-color-item         : @geekblue-10;      //bg color
+@nav-color-item         : @primary-10;      //bg color
 @nav-color-menu         : @grey-1;          //menu color
 @nav-color-menu-item    : @text-color;       //menu text color
 @nav-color-current      : @grey-1;          //select
-@nav-color-active       : @geekblue-6;     //item active color
+@nav-color-active       : @primary-6;     //item active color
 @nav-color-item-hover   : @item-hover-bg;  //menu item hover color 浅蓝色
 
 //nav tree color
@@ -532,8 +532,8 @@
 @nav-text-active-color  : @grey-1;      //item active color
 @nav-text-current-color : @grey-1;          //selected color
 @nav-disabled-color     : @grey-4;          //disabled color
-@nav-item-normal-bg     : @geekblue-10;          //bg color
-@nav-item-hover-bg      : @geekblue-6;     //menu item hover color
+@nav-item-normal-bg     : @primary-6;          //bg color
+@nav-item-hover-bg      : @primary-6;     //menu item hover color
 @nav-item-acitve-bg     : @grey-1;     //item active color
 @nav-border-color       : @primary-6;
 
