--- a/src/js/outer/datePicker/1.0.1/less/cdn_index.less
+++ b/src/js/outer/datePicker/1.0.1/less/cdn_index.less
@@ -180,6 +180,10 @@
 .@{nv-prefix}-datepicker-line-default{
   background: @primary-2;
   border-radius: 20px;
+  color: @grey-1;
+  .@{nv-prefix}-datepicker-unrange,.@{nv-prefix}-datepicker-readonly{
+    color: @grey-1;
+  }
 }
 .@{nv-prefix}-datepicker-line-choose{
   background: @primary-6;
