--- a/src/less/inner/theme/default.less
+++ b/src/less/inner/theme/default.less
@@ -8,7 +8,7 @@
 //
 //
 //
-@primary-color          : #e52f2c;
+@primary-color          : @grey-8;
 @info-color             : @geekblue-6;
 @success-color          : @green-6;
 @error-color            : @red-6;
