--- a/src/less/inner/color/colors.less
+++ b/src/less/inner/color/colors.less
@@ -30,7 +30,7 @@
 @orange-3: color(~`colorPalette("@{orange-6}", 3)`);
 @orange-4: color(~`colorPalette("@{orange-6}", 4)`);
 @orange-5: color(~`colorPalette("@{orange-6}", 5)`);
-@orange-6: #FF9100 ;
+@orange-6: #ffb714 ;
 @orange-7: color(~`colorPalette("@{orange-6}", 7)`);
 @orange-8: color(~`colorPalette("@{orange-6}", 8)`);
 @orange-9: color(~`colorPalette("@{orange-6}", 9)`);
